syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.truta";
option java_outer_classname = "TaskGrpcProto";

package task;

service TaskResource {
    rpc CreateTask (Task) returns (TaskCreationResult) {}
}

message Task {
    required int32 taskId = 1;
    string taskName = 2;
    string taskDefinition = 3;
    string taskDeadline = 4;
    string taskOwner = 5;
}

message TaskCreationResult {
    int32 status = 1;
}

